5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_869.log
== SUBMITION (2019-04-16 12:49:51) 
-- CODE:
valor = float(input("compra:"))
if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco,2))
-- EXECUTION TIME:
0.124026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 2, in <module>
    if (preco >= 200.00):
NameError: name 'preco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:50:17) 
-- CODE:
valor = float(input("compra:"))
if (valor >= 200.00):
	preco = preco * 0.95
	print(round(preco,2))
-- EXECUTION TIME:
0.15741
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 3, in <module>
    preco = preco * 0.95
NameError: name 'preco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:50:18) 
-- CODE:
valor = float(input("compra:"))
if (valor >= 200.00):
	preco = preco * 0.95
	print(round(preco,2))
-- EXECUTION TIME:
0.114998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 3, in <module>
    preco = preco * 0.95
NameError: name 'preco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:50:56) 
-- CODE:
valor = float(input("compra:"))
if (compra >= 200.00):
	compra = compra * 0.95
	print(round(compra,2))
-- EXECUTION TIME:
0.131323
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 2, in <module>
    if (compra >= 200.00):
NameError: name 'compra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:50:58) 
-- CODE:
valor = float(input("compra:"))
if (compra >= 200.00):
	compra = compra * 0.95
	print(round(compra,2))
-- EXECUTION TIME:
0.230843
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 2, in <module>
    if (compra >= 200.00):
NameError: name 'compra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:50:58) 
-- CODE:
valor = float(input("compra:"))
if (compra >= 200.00):
	compra = compra * 0.95
	print(round(compra,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (compra >= 200.00):
NameError: name 'compra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:52:17) 
-- CODE:
preco = float(input("compra:"))
if (preco >= 200.00):
	preco = cpreco * 0.95
	print(round(preco, 2))
-- EXECUTION TIME:
0.132642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 3, in <module>
    preco = cpreco * 0.95
NameError: name 'cpreco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:52:18) 
-- CODE:
preco = float(input("compra:"))
if (preco >= 200.00):
	preco = cpreco * 0.95
	print(round(preco, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco = cpreco * 0.95
NameError: name 'cpreco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:52:18) 
-- CODE:
preco = float(input("compra:"))
if (preco >= 200.00):
	preco = cpreco * 0.95
	print(round(preco, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco = cpreco * 0.95
NameError: name 'cpreco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:52:18) 
-- CODE:
preco = float(input("compra:"))
if (preco >= 200.00):
	preco = cpreco * 0.95
	print(round(preco, 2))
-- EXECUTION TIME:
0.132589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 3, in <module>
    preco = cpreco * 0.95
NameError: name 'cpreco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:52:35) 
-- CODE:
preco = float(input("compra:"))
if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
-- EXECUTION TIME:
0.164792
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:53:07) 
-- CODE:
a = float(input("compra:"))
if (a >= 200.00):
	a = a * 0.95
	print(round(a, 2))
-- EXECUTION TIME:
0.184602
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:53:09) 
-- CODE:
a = float(input("compra:"))
if (a >= 200.00):
	a = a * 0.95
	print(round(a, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:53:22) 
-- CODE:
a = float(input("compra:"))
if (a >= 200.00):
	a = a * 0.95
	print(round(a, 2))
-- EXECUTION TIME:
0.190355
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
